# Cpp

Gproject/: CMakeLists.txt  main.cpp  readme.txt
Gproject/classes/: Homework.cpp  Homework.hpp  Login.cpp  Login.hpp  Register.cpp  Register.hpp  Student.cpp  Student.hpp  Teacher.cpp  Teacher.hpp  User.cpp  User.hpp  globals.cpp  globals.hpp
Gproject/students/: test1.txt  test2.txt  user1.txt
Gproject/teachers/: Teacher.txt  teacher1.txt
Hw1/: 1.cpp  Hw1.1.cpp  Hw1.2.2.cpp  Hw1.2.3.cpp  Hw1.3.cpp  hw1.2.1.cpp
Hw2/: CMakeLists.txt  header2.cpp  header2.hpp  header3.cpp  header3.hpp  hw2.1.1.cpp  hw2.1.2.cpp  hw2.1.3.cpp  hw2.2.1.cpp  hw2.2.2.cpp  hw2.2.3.cpp  hw3.1.cpp
Hw3/: CMakeLists.txt  q1.cpp  q2.cpp  q3.cpp
Hw4/: CMakeLists.txt  q1.cpp
Hw5/: CMakeLists.txt  q1.cpp  q2.cpp  test.cpp
Hw6/: CMakeLists.txt  q1.cpp  q2.cpp
Hw7/: q1.cpp  q2.cpp
Hw8/: CMakeLists.txt  q1.cpp  test.cpp
Hw9/: q1.cpp  q2.cpp
Lab1/: loop.cpp  random.hpp  test.cpp
Project/: CMakeLists.txt  login.cpp
examples/example1/: CMakeLists.txt  main02.cpp  test01.cpp  test02.cpp  test03.cpp
examples/example2/: CMakeLists.txt  prime_test01.cpp  qt_drawings1.cpp
lab2/: Lab2.1.cpp  lab2.2.cpp  lab2.3.cpp  test.html
lab3/: lab3.1.cpp  lab3.2.cpp  testsvg.html
lab5/: CMakeLists.txt  lab5.1.cpp  lab5.2.cpp
lab6/: q1.cpp  q2.cpp
lab7/: CMakeLists.txt  q1.cpp  q3.cpp  test.cpp
lab8/: CMakeLists.txt  q1.cpp
miniproject/: CMakeLists.txt  data.csv  main.cpp
nse_html/: CMakeLists.txt  h.html  html_test.cpp  q1.cpp  q2.cpp
simple_calculator/: CMakeLists.txt  calc.cpp  calc_expr.cpp
